Updated for MC1.13

--- a/LaunchPlate/config.yml
+++ b/LaunchPlate/config.yml
@@ -7,8 +7,8 @@
 #  Block beneath the pressure plate
 Material: OBSIDIAN
 #
-#  Type of pressure plate. Must be GOLD_PLATE, WOOD_PLATE, IRON_PLATE or STONE_PLATE.
-Plate: GOLD_PLATE
+#  Type of pressure plate. For example: HEAVY_WEIGHTED_PRESSURE_PLATE, SPRUCE_PRESSURE_PLATE, STONE_PRESSURE_PLATE, etc.
+Plate: HEAVY_WEIGHTED_PRESSURE_PLATE
 #
 #  Height for vertical bounce. Rough Guide: 1.8 = 16 blocks, 4.0 = 60 blocks, 8.0 = 128 blocks.
 Force: 0.8
@@ -22,13 +22,13 @@ Vertical_Bounce: true
 Magnitude: 2.5
 #
 #  Add a launch sound (optional). Remove the '#' from one of the Sounds to activate. A list of available sounds 
-#  for MC 1.12 can be found here:  https://hub.spigotmc.org/javadocs/spigot/org/bukkit/Sound.html.
-#Sound: ENTITY_FIREWORK_LAUNCH
-#Sound: ENTITY_ENDERMEN_SCREAM
+#  for MC 1.13 can be found here:  https://hub.spigotmc.org/javadocs/spigot/org/bukkit/Sound.html.
+#Sound: ENTITY_DRAGON_FIREBALL_EXPLODE
 #Sound: ENTITY_WOLF_HOWL
+#Sound: ENTITY_FIREWORK_LAUNCH
 #
 #  Add a particle effect on launch (optional). Remove the '#' from one of the Trails to activate. A list of available
-#  particle effects for MC 1.12 can be found here:  https://hub.spigotmc.org/javadocs/spigot/org/bukkit/Particle.html.
+#  particle effects for MC 1.13 can be found here:  https://hub.spigotmc.org/javadocs/spigot/org/bukkit/Particle.html.
 #Trail: SPELL_WITCH
 #Trail: REDSTONE
 #
