--- a/LaunchPlate/plugin.yml
+++ b/LaunchPlate/plugin.yml
@@ -1,11 +1,12 @@
 name: LaunchPlate
 main: io.steve4744.LaunchPlate.LaunchPlate
 author: steve4744
-version: 1.7
+version: 2.0
+api-version: 1.13
 description: Launches player when steps on special pressure plate.
 commands:
   launchplate:
-    aliases: [lp, launchplates]
+    aliases: [lp, lpl, launchplates]
     description: LaunchPlate commands
 permissions:
   launchplate.use:
