--- a/config.yml
+++ b/config.yml
@@ -22,14 +22,15 @@ Vertical_Bounce: true
 Magnitude: 2.5
 #
 #  Add a launch sound (optional). Remove the '#' from one of the Sounds to activate. A list of available sounds 
-#  for MC 1.13 can be found here:  https://hub.spigotmc.org/javadocs/spigot/org/bukkit/Sound.html.
+#  for MC 1.13.1 can be found here:  https://hub.spigotmc.org/javadocs/spigot/org/bukkit/Sound.html.
 #Sound: ENTITY_DRAGON_FIREBALL_EXPLODE
-#Sound: ENTITY_WOLF_HOWL
-#Sound: ENTITY_FIREWORK_LAUNCH
+#Sound: ENTITY_EVOKER_PREPARE_WOLOLO
+#Sound: ENTITY_FIREWORK_ROCKET_LAUNCH
 #
 #  Add a particle effect on launch (optional). Remove the '#' from one of the Trails to activate. A list of available
-#  particle effects for MC 1.13 can be found here:  https://hub.spigotmc.org/javadocs/spigot/org/bukkit/Particle.html.
+#  particle effects for MC 1.13.1 can be found here:  https://hub.spigotmc.org/javadocs/spigot/org/bukkit/Particle.html.
 #Trail: SPELL_WITCH
+#Trail: SQUID_INK
 #Trail: REDSTONE
 #
 # Check for new version
