--- a/plugin.yml
+++ b/plugin.yml
@@ -1,5 +1,5 @@
 name: LaunchPlate
-main: io.steve4744.LaunchPlate.LaunchPlate
+main: io.github.steve4744.launchplate.LaunchPlate
 author: steve4744
 version: 2.3
 api-version: 1.13
